# AstroTrading

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: Home.py  bootstrap.py
app/pages/: 1_Astro_Quant.py  2_Alfayate_Engine.py  3_Bagger_Scanner.py
docs/: QAQC_TIER1_REPORT.md  bagger_scanner.md  cyclic_index.md
scripts/: build_forecast_50y.py  build_historical_index.py  hash_password.py  smoke_check.py
src/astrotrading/: __init__.py  auth_gate.py  data_service.py
src/astrotrading/agents/: __init__.py  narratives.py
src/astrotrading/alfayate/: __init__.py  engine.py
src/astrotrading/astrology/: __init__.py  cyclic_index.py  forecast.py
src/astrotrading/bagger/: __init__.py  engine.py  literature.py  scoring.py  universe.py
src/astrotrading/market_data/: __init__.py  fetchers.py
src/astrotrading/quant/: __init__.py  comparison.py  regime.py
tests/: test_auth.py  test_bagger_fundamentals.py  test_bagger_scoring.py  test_cyclic_index.py  test_forecast.py  test_regime.py
