[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrotrading"
version = "0.1.0"
description = "Private quant dashboard: Barbault Cyclic Index + Alfayate top-down engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AstroTrading" }]
dependencies = [
    "skyfield>=1.49",
    "jplephem>=2.22",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "yfinance>=0.2.40",
    "plotly>=5.18",
    "streamlit>=1.32",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
